new color matching

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .DS_Store
 saddsrc/__pycache__/ImageReg.cpython-311.pyc
 src/__pycache__/LunarReg.cpython-311.pyc
+src/__pycache__/ImageReg.cpython-311.pyc
